Changes to mcmcplots version 0.4
* convert.mcmc.list
  - added this function to help convert objects to mcmc.list objects.
* denplot, denoverplot1:
  - corrected a bug that would not recognize the "lwd" option when style="gray". (Thanks to Pei-Hsuan Chiu.)
* caterplot:
  - added the eps option which controls the spacing between chains (or density strips) when collapse=FALSE.
  - added the las option which controls the rotation of the parameter labels on the label axis. (Thanks to Jessi Brown for the idea.)
* mcmcplot, mcmcplot1, denoverplot1
  - added xlim and ylim options. (Thanks to Ilya Goldin for the idea.)
* denplot, corplot, denoverplot, traplot, caterplot
  - added the greek option which attemts to convert the names of greek letters in labels to greek characters on the plot.
* denoverplot
  - corrected bug that plotted a gray background for the legend when style="plain"
* traplot, denoverplot
  - added plot.title option and changed the functionality of the main option to match denplot
* mcmcplotsPalette
  - added option "type" which selects the type of color palette to create: rainbow, sequential, or grayscale. (Thanks to Ilya Goldin for the idea.)
  - deprecated "seq" option
* caterplot, mcmcplot, denplot, traplot
  - These functions now assign variable names (with a warning) when the mcmcout argument does not have valid variable names.
* parms2plot
  - simplified function logic (at least, that was my intent... maybe I just made things more complicated)
  - added "leaf.marker" option
  - added "do.unlist" option to allow for hyperlinking to parameter groups in the mcmcplot plot function. (Thanks to Ilya Goldin for writing some initial code.)
* mcmcplot
  - added hyperlinking to parameter groups, improved layout of plots with CSS file, removed dependence on R2HTML.
* .html.begin, .html.end, .html.img
  - new functions contributed by Ilya Goldin for use by mcmcplot.


Changes to mcmcplots version 0.3
* autplot1:
  - now plots confidence intervals