@@ -3,7 +3,11 @@ Type: Package
 Title: Create Plots from MCMC Output
 Version: 0.4
 Date: 2010-01-12
-Author: S. McKay Curtis <s.mckay.curtis@gmail.com>
+Author@R: c(
+	  person("S. McKay", "Curtis", role=c("aut", "cre"), email="s.mckay.curtis@gmail.com"),
+	  person("Ilya", "Goldin", role="ctb")
+	  )
+Author: S. McKay Curtis with contributions from Ilya Goldin
 Maintainer: S. McKay Curtis <s.mckay.curtis@gmail.com>
 Depends: coda
 Imports: sfsmisc, R2HTML, colorspace, denstrip
